--- a/main/src/main/resources/application.conf
+++ b/main/src/main/resources/application.conf
@@ -1,15 +1,17 @@
 akka {
   actor {
+    warn-about-java-serializer-usage = off
     allow-java-serialization = on
+    serialize-creators = on
     provider = remote
   }
   remote {
     artery {
       enabled = on
-      canonical.hostname = 127.0.0.1      # external (logical) hostname
-      canonical.port = 2552                   # external (logical) port
+      canonical.hostname = 127.0.0.1    # external (logical) hostname
+      canonical.port = 2552                 # external (logical) port
 
-      bind.hostname = 127.0.0.1         # internal (bind) hostname
+      bind.hostname = 127.0.0.1             # internal (bind) hostname
       bind.port = 2552                     # internal (bind) port
     }
   }
