--- a/main/pom.xml
+++ b/main/pom.xml
@@ -3,27 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>live.itsnotascii</groupId>
+    <parent>
+        <groupId>live</groupId>
+        <artifactId>itsnotascii</artifactId>
+        <version>1.0</version>
+    </parent>
     <artifactId>main</artifactId>
-    <version>1.0</version>
-
-    <properties>
-        <akka.version>2.6.0</akka.version>
-    </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencies>
         <dependency>
@@ -45,13 +30,14 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-remote_2.13</artifactId>
-            <version>${akka.version}</version>
-        </dependency>
-        <dependency>
             <groupId>live.itsnotascii</groupId>
             <artifactId>core</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>live</groupId>
+            <artifactId>cache</artifactId>
             <version>1.0</version>
             <scope>compile</scope>
         </dependency>
