--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>live</groupId>
-        <artifactId>itsnotascii</artifactId>
+        <groupId>live.itsnotascii</groupId>
+        <artifactId>parent</artifactId>
         <version>1.0</version>
     </parent>
     <artifactId>core</artifactId>
