Args: use the args to configure ports

--- a/main/src/main/resources/application.conf
+++ b/main/src/main/resources/application.conf
@@ -1,18 +1,18 @@
 akka {
   actor {
-    warn-about-java-serializer-usage = off
     allow-java-serialization = on
-    serialize-creators = on
-    provider = remote
+    provider = cluster
   }
   remote {
     artery {
-      enabled = on
-      canonical.hostname = 127.0.0.1    # external (logical) hostname
-      canonical.port = 2552                 # external (logical) port
-
-      bind.hostname = 127.0.0.1             # internal (bind) hostname
-      bind.port = 2552                     # internal (bind) port
+      canonical {
+        hostname = 127.0.0.1
+        port = 25520
+      }
+      bind {
+        hostname = 127.0.0.1
+        port = 25520
+      }
     }
   }
 }
