--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>akka-remote_2.13</artifactId>
             <version>${akka.version}</version>
         </dependency>
+        <dependency>
+        <groupId>com.beust</groupId>
+        <artifactId>jcommander</artifactId>
+        <version>1.78</version>
+    </dependency>
+
     </dependencies>
 
 </project>
