Adding Video-Processors to Main VideoProcessorManager: + Added support for remote requests
Main/Coordinator:
* modified requests to be more generic
+ added video request function

CacheManager:
* Refactor of request and response

CacheQuery:
* minor refactor

Log reformatting

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>Core</module>
         <module>Cache</module>
         <module>Main</module>
+        <module>Video-Processor</module>
     </modules>
 
     <properties>
