--- a/main/pom.xml
+++ b/main/pom.xml
@@ -39,5 +39,10 @@
             <artifactId>cache</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>live.itsnotascii</groupId>
+            <artifactId>video-processor</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 </project>
