VideoProcessing: Added video fetching Video-Processor -> Video-Processor-Core: + now abstract for multiple implementations
Video-Processor-JCodec:
+ Added JCodec video processor

FrameProcessor:
+ Processes individual frames (todo)

--- a/main/pom.xml
+++ b/main/pom.xml
@@ -41,7 +41,7 @@
         </dependency>
         <dependency>
             <groupId>live.itsnotascii</groupId>
-            <artifactId>video-processor</artifactId>
+            <artifactId>video-processor-core</artifactId>
             <version>1.0</version>
         </dependency>
     </dependencies>
