video: sending bigger sizes & reduced frame size

--- a/video-processor-core/src/main/resources/application.conf
+++ b/video-processor-core/src/main/resources/application.conf
@@ -14,7 +14,7 @@ akka {
         port = 25520
       }
       advanced {
-        maximum-frame-size = 256KiB
+        maximum-frame-size = 256MiB
         buffer-pool-size = 128
         maximum-large-frame-size = 4MiB
         large-buffer-pool-size = 32
