--- a/video-processor-jcodec/dockerfile
+++ b/video-processor-jcodec/dockerfile
@@ -1,11 +1,11 @@
 FROM openjdk:12
 
-ENV webport 82
-ENV webbind 127.0.0.1
-ENV port 25522
+ENV port 25520
 ENV bind 127.0.0.1
 ENV name itsnotasciilive
 ENV target http://localhost
+ENV verbose -v
+ENV JAVA_OPTS="-Xms512M -Xmx1024M -XX:+UseContainerSupport"
 
 COPY target/video-processor-jcodec-1.0-allinone.jar /video-processor-jcodec-1.0.jar
-CMD /usr/bin/java -cp /video-processor-jcodec-1.0.jar live.itsnotascii.JCodecProcessorMain --webport ${webport} --webbind ${webbind} --port ${port} --bind ${bind} --name ${name} --target ${target}
+ENTRYPOINT exec java ${JAVA_OPTS} -cp /video-processor-jcodec-1.0.jar live.itsnotascii.JCodecProcessorMain -n ${name} -p ${port} -b ${bind} -t ${target} ${verbose}
